--- a/app/src/main/res/drawable/fondo_chile.xml
+++ b/app/src/main/res/drawable/fondo_chile.xml
@@ -3,8 +3,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#0039A6"
-        android:centerColor="#FFFFFF"
-        android:endColor="#D52B1E"
+        android:startColor="#C21B0E"
+        android:centerColor="#D52B1E"
+        android:endColor="#650E08"
         android:angle="270"/>
 </shape>
