--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,49 +10,96 @@
     android:padding="24dp">
 
     <!-- Texto de Bienvenida e indicaciones -->
+
+    <!-- Boton para vizualizar las recetas -->
+
+    <ImageButton
+        android:id="@+id/recetaCrear"
+        android:layout_width="175dp"
+        android:layout_height="115dp"
+        android:adjustViewBounds="true"
+        android:background="#0039A6"
+        android:scaleType="fitCenter"
+        android:src="@drawable/addreceta"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.714" />
+
+    <ImageButton
+        android:id="@+id/recetasTragos"
+        android:layout_width="175dp"
+        android:layout_height="115dp"
+        android:adjustViewBounds="true"
+        android:background="#0039A6"
+        android:scaleType="fitCenter"
+        android:src="@drawable/variedadestragos"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.714" />
+
     <TextView
         android:id="@+id/titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
         android:text="Recetas S18!"
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/verRecetas"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.097" />
 
     <TextView
         android:id="@+id/informacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recetas de cocina para un buen \n         18 de Septiembre 2025"
+        android:layout_marginTop="20dp"
+        android:background="#0039A6"
+        android:text="@string/recetas_de_cocina_para_un_buen_n_18_de_septiembre_2025"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/verRecetas"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titulo"
-        app:layout_constraintVertical_bias="0.924" />
+        app:layout_constraintTop_toBottomOf="@+id/titulo" />
 
-    <!-- Boton para vizualizar las recetas -->
-    <Button
-        android:id="@+id/verRecetas"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="172dp"
-        android:text="Ver ahora!"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#D52B1E"
+    <ImageButton
+        android:id="@+id/recetasEmpanadas"
+        android:layout_width="175dp"
+        android:layout_height="115dp"
+        android:adjustViewBounds="true"
+        android:background="#0039A6"
+        android:scaleType="fitCenter"
+        android:src="@drawable/variedadesempanadas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.478" />
 
+    <ImageButton
+        android:id="@+id/recetasParrillas"
+        android:layout_width="175dp"
+        android:layout_height="115dp"
+        android:adjustViewBounds="true"
+        android:background="#0039A6"
+        android:scaleType="fitCenter"
+        android:src="@drawable/variedadparrilla"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.978"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.478" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
