--- a/app/src/main/res/layout/activity_empanadas_pino.xml
+++ b/app/src/main/res/layout/activity_empanadas_pino.xml
@@ -36,12 +36,12 @@
         android:id="@+id/imgEmpanadaPino"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/empanada_pino"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/titulo_empanada_pino"
-        app:layout_constraintTop_toBottomOf="@id/tituloEmpanadaPino"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/empanada_pino"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tituloEmpanadaPino" />
 
     <ScrollView
         android:layout_width="0dp"
