--- a/app/src/main/res/layout/activity_marisco_empanada.xml
+++ b/app/src/main/res/layout/activity_marisco_empanada.xml
@@ -2,55 +2,67 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo_chile"
-    tools:context=".EmpanadaMarisco">
+    tools:context=".MariscoEmpanada">
 
     <ImageButton
-        android:id="@+id/btnAtrasMarisco"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:backgroundTint="#D52B1E"
+        android:id="@+id/btnMenuRetroceder"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/volver_atras"
-        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/btn_retroceso"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tituloEmpanadaMarisco"
+        android:id="@+id/tituloEmpanadaMarisco2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/titulo_empanada_marisco"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/btnAtrasMarisco"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.139" />
 
     <ImageView
-        android:id="@+id/imgEmpanadaMarisco"
+        android:id="@+id/imgEmpanadaMarisco2"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/empanada_marisco"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/titulo_empanada_marisco"
-        app:layout_constraintTop_toBottomOf="@id/tituloEmpanadaMarisco"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/empanada_marisco"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.184" />
 
     <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/imgEmpanadaMarisco"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/scrollView2"
+        android:layout_width="341dp"
+        android:layout_height="428dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="16dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="6dp"
+        android:background="#0039A6"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,7 +74,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/ingredientes_empanada_marisco"
-                android:textColor="@color/black"
+                android:textColor="#FFFF"
                 android:textSize="14sp"
                 android:textStyle="bold"/>
 
@@ -71,10 +83,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/preparacion_empanada_marisco"
-                android:textColor="@color/black"
+                android:textColor="#FFFF"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:layout_marginTop="12dp"/>
         </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
