--- a/app/src/main/res/layout/activity_pino_empanada.xml
+++ b/app/src/main/res/layout/activity_pino_empanada.xml
@@ -5,59 +5,86 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_chile"
     tools:context=".PinoEmpanada">
 
     <ImageButton
-        android:id="@+id/btnRecetasAnteriores3"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:id="@+id/btnRetrocederOpciones"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="#D52B1E"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/volver_atras"
-        android:src="@drawable/baseline_arrow_back_24"
+        android:scaleType="centerCrop"
+        android:src="@drawable/btn_retroceso"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tituloEmpanadaPino3"
+        android:id="@+id/tituloEmpanadaPino2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:text="@string/titulo_empanada_pino"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnRecetasAnteriores2" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.117" />
 
     <ImageView
-        android:id="@+id/imgEmpanadaPino3"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/imgEmpanadaPino2"
+        android:layout_width="191dp"
+        android:layout_height="177dp"
         android:layout_marginTop="16dp"
         android:contentDescription="@string/titulo_empanada_pino"
         android:src="@drawable/empanada_pino"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tituloEmpanadaPino" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.202" />
 
-    <TextView
-        android:id="@+id/ingredientesEmpanadaPino3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/ingredientes_empanada_pino"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="341dp"
+        android:layout_height="428dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="6dp"
+        android:background="#0039A6"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/preparacionEmpanadaPino3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/preparacion_empanada_pino"
-        android:textColor="@color/black"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/ingredientesEmpanadaPino"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/ingredientes_empanada_pino"
+                android:textColor="#FFFF"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/preparacionEmpanadaPino"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="@string/preparacion_empanada_pino"
+                android:textColor="#FFFF"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
